UI Fixes   - Resolved errors on button activation in collapsed mode   - Added button action to switch to content view in collapsed mode   - Minor CSS tweaks

--- a/zf/css/application.css
+++ b/zf/css/application.css
@@ -27,8 +27,8 @@
 
 /* Expanded sidebar window focused */
 navigation-split-view widget.sidebar-pane navigation-view-page {
-    background-color: @headerbar_bg_color;
-    border-right-width: 1px;
+    /* background-color: @headerbar_bg_color; */ /* Hides the sidebar separator */
+    border-right-width: 5px;
 }
 navigation-split-view widget.sidebar-pane toolbarview list {
     background-color: @headerbar_bg_color;
@@ -88,6 +88,9 @@ navigation-split-view navigation-view-page toolbarview list {
 }
 .action-row-rounded:selected {
     background-color: alpha(@theme_selected_fg_color, 0.1);
+    outline-color: alpha(@theme_selected_bg_color, 0.3);
+    outline-width: 1px;
+    outline-offset: -1px;
     min-height: 36px;
     font-weight: 400;
     line-height: 36px;
